<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/about"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUs"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="12dp" />

    <EditText
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="12"
        android:hint="@string/enterName"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="age"
        android:ems="12"
        android:hint="@string/enterAge"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="address"
        android:ems="12"
        android:hint="@string/enterAddress"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="mail"
        android:ems="12"
        android:hint="@string/enterMail"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="mail password"
        android:ems="12"
        android:hint="@string/enterMailPassword"
        android:inputType="numberPassword"
        android:minHeight="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Light_Gray"
        android:text="@string/submit"
        android:textColor="@color/black"
        />


</LinearLayout>
